# xiaozhi_25

./: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Com_Config.h  Com_Debug.h  idf_component.yml  main.c
main/audio_process/: audio_decoder.c  audio_decoder.h  audio_encoder.c  audio_encoder.h  audio_sr.c  audio_sr.h
main/bsp/: bsp_sound.c  bsp_sound.h  bsp_wifi.c  bsp_wifi.h  bsp_ws2812.c  bsp_ws2812.h
main/commu/: commu_ota.c  commu_ota.h  commu_ws.c  commu_ws.h
main/display/: display.c  display.h
main/iot/: descriptor.txt  iot.c  iot.h  state.txt
